# fastapiblog

./: .gitignore  README.md  pyproject.toml
app/: config.py  exceptions.py  main.py
app/api/: dao.py  models.py  router.py  shemas.py
app/auth/: models.py  router.py  schemas.py  utils.py
app/dao/: base.py  database.py
app/dependencies/: auth_dep.py  dao_dep.py  post_dep.py
app/migration/: env.py
app/migration/versions/: 0fb4057ea468_clean_alembic_migration.py  9a77a6191652_initial_migration.py  9d2ccb3c21a0_added_post_blog_tables.py
app/pages/: router.py
app/static/js/: post.js
app/static/style/: 404.css  post.css  posts.css
app/templates/: 404.html  post.html  posts.html
data/: db.sqlite3
